--- a/dreambooth/clip/clipForOpenbayes.ipynb
+++ b/dreambooth/clip/clipForOpenbayes.ipynb
@@ -77,9 +77,9 @@
         "        try:\n",
         "            result = subprocess.run(['7z', 'x', '-y', 'Dependencies.7z.001'], stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
         "            if result.returncode == 0:\n",
-        "                print('\u547d\u4ee4\u6267\u884c\u6210\u529f')\n",
+        "                print('7z\u89e3\u538b\u547d\u4ee4\u6267\u884c\u6210\u529f')\n",
         "            else:\n",
-        "                print('\u547d\u4ee4\u6267\u884c\u5931\u8d25:', result.stderr)\n",
+        "                print('7z\u89e3\u538b\u547d\u4ee4\u6267\u884c\u5931\u8d25:', result.stderr)\n",
         "                print('\u6b63\u51c6\u5907\u91cd\u65b0\u4e0b\u8f7d')\n",
         "                # \u5220\u9664\n",
         "                for i in range(1,6):\n",
@@ -88,7 +88,7 @@
         "                # \u91cd\u65b0\u4e0b\u8f7d\n",
         "                download_and_unzip_dependencies()\n",
         "        except Exception as e:\n",
-        "            print('\u547d\u4ee4\u6267\u884c\u5931\u8d25:', e)\n",
+        "            print('7z\u89e3\u538b\u547d\u4ee4\u6267\u884c\u5931\u8d25:', e)\n",
         "\n",
         "    else:\n",
         "        print('7z\u5df2\u7ecf\u89e3\u538b')\n",
@@ -102,27 +102,10 @@
         "# \u5982\u679c /usr/local/lib/python3.8/dist-packages \u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5219\u590d\u5236\n",
         "if not dist_packages_exist:\n",
         "    !cp -r /openbayes/home/content/usr/local/lib/python3.8/dist-packages /usr/local/lib/python3.8/\n",
+        "    # \u590d\u5236\u6210\u529f\u540e\uff0c\u53ef\u4ee5\u6e05\u7a7a\u89e3\u538b\u51fa\u6765\u7684\u6587\u4ef6\n",
+        "    !rm -rf /openbayes/home/content/usr\n",
         "\n",
-        "# \u68c0\u67e5 diffusers \u4ed3\u5e93\u662f\u5426\u5df2\u7ecf\u514b\u9686\n",
-        "diffusers_repo_exist = os.path.exists(\"/openbayes/home/content/diffusers\")\n",
-        "\n",
-        "# \u5982\u679c\u4ed3\u5e93\u4e0d\u5b58\u5728\uff0c\u5219\u514b\u9686\u4ed3\u5e93\n",
-        "if not diffusers_repo_exist:\n",
-        "    !git clone --branch updt https://github.com/TheLastBen/diffusers\n",
-        "\n",
-        "# \u68c0\u67e5 diffusers \u5e93\u662f\u5426\u5df2\u7ecf\u5b89\u88c5\n",
-        "diffusers_installed = False\n",
-        "for library in installed_libraries:\n",
-        "    if library.startswith(\"diffusers\"):\n",
-        "        diffusers_installed = True\n",
-        "        break\n",
-        "\n",
-        "# \u5982\u679c\u5c1a\u672a\u5b89\u88c5 diffusers \u5e93\uff0c\u5219\u5b89\u88c5\u5b83\n",
-        "if not diffusers_installed:\n",
-        "    !pip uninstall -y diffusers\n",
-        "    !pip install /openbayes/home/content/diffusers\n",
-        "\n",
-        "print('\u001b[1;32mDONE !')"
+        "print('\u001b[1;32mDONE !\\033[0m')"
       ]
     },
     {
