--- a/tools/model_convert_tools/convertodiffv2.ipynb
+++ b/tools/model_convert_tools/convertodiffv2.ipynb
@@ -86,31 +86,49 @@
         "import os\n",
         "import subprocess\n",
         "\n",
-        "!pip uninstall -y diffusers\n",
+        "# \u5b9a\u4e49get_thisrepo_root\u51fd\u6570\uff0c\u83b7\u53d6\u5f53\u524drepo\u6240\u5728\u7684\u7236\u76ee\u5f55\n",
+        "def get_thisrepo_root():\n",
+        "    # \u8c03\u7528\u547d\u4ee4\u884c\u5de5\u5177git rev-parse\uff0c\u83b7\u53d6git\u9879\u76ee\u7684\u6839\u76ee\u5f55\n",
+        "    git_root = subprocess.run(\n",
+        "        [\"git\", \"rev-parse\", \"--show-toplevel\"],\n",
+        "        capture_output=True,\n",
+        "        text=True,\n",
+        "    ).stdout.strip()\n",
         "\n",
-        "# \u8c03\u7528\u547d\u4ee4\u884c\u5de5\u5177git rev-parse\uff0c\u83b7\u53d6git\u9879\u76ee\u7684\u6839\u76ee\u5f55\n",
-        "git_root = subprocess.run(\n",
-        "    [\"git\", \"rev-parse\", \"--show-toplevel\"],\n",
-        "    capture_output=True,\n",
-        "    text=True,\n",
-        ").stdout.strip()\n",
+        "    # \u83b7\u53d6\u6839\u76ee\u5f55\u7684\u7236\u76ee\u5f55\n",
+        "    parent_dir = os.path.dirname(git_root)\n",
+        "    \n",
+        "    return parent_dir\n",
         "\n",
-        "# \u83b7\u53d6\u6839\u76ee\u5f55\u7684\u7236\u76ee\u5f55\n",
-        "parent_dir = os.path.dirname(git_root)\n",
+        "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "# \u68c0\u67e5 diffusers \u5e93\u662f\u5426\u5df2\u7ecf\u5b89\u88c5\n",
+        "diffusers_installed = False\n",
+        "for library in installed_libraries:\n",
+        "    if library.startswith(\"diffusers\"):\n",
+        "        diffusers_installed = True\n",
+        "        break\n",
         "\n",
-        "content_folder=parent_dir\n",
+        "# \u5982\u679c\u5c1a\u672a\u5b89\u88c5 diffusers \u5e93\uff0c\u5219\u4e0b\u8f7d\u5e76\u5b89\u88c5\u5b83\n",
+        "if not diffusers_installed:\n",
+        "    print('\u68c0\u6d4b\u5230Diffusers\u8fd8\u6ca1\u5b89\u88c5\uff0c\u6b63\u5728\u5b89\u88c5...')\n",
+        "    # \u83b7\u53d6\u6839\u76ee\u5f55\u7684\u7236\u76ee\u5f55\n",
+        "    parent_dir = get_thisrepo_root()\n",
+        "    content_folder=os.path.join(parent_dir,'./content')\n",
         "\n",
-        "# \u68c0\u6d4b diffusers \u76ee\u5f55\u662f\u5426\u5b58\u5728\n",
-        "if not os.path.exists(os.path.join(content_folder, 'diffusers')):\n",
-        "    # \u5982\u679c diffusers \u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5219\u8fdb\u884c clone\n",
-        "    !cd $content_folder &&\\\n",
-        "    git clone --branch updt https://github.com/TheLastBen/diffusers\n",
+        "    # \u68c0\u6d4b diffusers \u76ee\u5f55\u662f\u5426\u5b58\u5728\n",
+        "    if not os.path.exists(os.path.join(content_folder, 'diffusers')):\n",
+        "        # \u5982\u679c diffusers \u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5219\u8fdb\u884c clone\n",
+        "        !cd $content_folder &&\\\n",
+        "        git clone --branch updt https://github.com/TheLastBen/diffusers\n",
+        "    else:\n",
+        "        # \u5982\u679c diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u4e0d\u8fdb\u884c clone\uff0c\u76f4\u63a5\u8f93\u51fa\u63d0\u793a\u4fe1\u606f\n",
+        "        print('\u001b[1;32mdiffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u4e0d\u8fdb\u884c clone \u64cd\u4f5c\u3002\\033[0m')    \n",
+        "    \n",
+        "    !pip uninstall -y diffusers\n",
+        "    !pip install /openbayes/home/content/diffusers\n",
+        "    print('\u001b[1;32m\u5df2\u6210\u529f\u5b89\u88c5Diffusers!\\033[0m')\n",
         "else:\n",
-        "    # \u5982\u679c diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u4e0d\u8fdb\u884c clone\uff0c\u76f4\u63a5\u8f93\u51fa\u63d0\u793a\u4fe1\u606f\n",
-        "    print('diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u4e0d\u8fdb\u884c clone \u64cd\u4f5c\u3002')\n",
-        "  \n",
-        "!pip install --user $content_folder/diffusers\n",
-        "print('\u001b[1;32m\u5df2\u6210\u529f\u5b89\u88c5Diffusers!\\033[0m')"
+        "    print('\u001b[1;32m\u5df2\u5b89\u88c5Diffusers\uff0c\u8df3\u8fc7\u4e0b\u8f7d\u548c\u5b89\u88c5!\\033[0m')"
       ]
     },
     {
