--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -28,7 +28,6 @@
         "    \"jax\",\n",
         "    \"xformers\",\n",
         "    \"triton==2.0.0.dev20221120\",\n",
-        "    \"xxhash\",\n",
         "]\n",
         "\n",
         "tools_to_install = [\n",
@@ -282,7 +281,9 @@
         "    checksum = hashlib.sha256()\n",
         "    # \u904d\u5386\u6587\u4ef6\u5939\n",
         "    with os.scandir(folder_path) as entries:\n",
-        "        for entry in entries:\n",
+        "        # \u5bf9\u6587\u4ef6\u548c\u5b50\u6587\u4ef6\u5939\u6309\u7167\u5b57\u6bcd\u987a\u5e8f\u6392\u5e8f\n",
+        "        sorted_entries = sorted(entries, key=lambda entry: entry.name)\n",
+        "        for entry in sorted_entries:\n",
         "            # \u82e5\u4e3a\u5b50\u6587\u4ef6\u5939\uff0c\u5219\u9012\u5f52\u8c03\u7528 generate_checksum()\n",
         "            if entry.is_dir():\n",
         "                # \u9012\u5f52\u8c03\u7528 generate_checksum()\n",
@@ -298,9 +299,10 @@
         "    # \u8fd4\u56de\u5341\u516d\u8fdb\u5236\u54c8\u5e0c\u503c\n",
         "    return checksum.hexdigest()\n",
         "\n",
-        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 9dafc9ba57054a61cc7d898e89b5fb33c7dc8ab9293609a40eda823793b2808a\n",
+        "\n",
+        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb\n",
         "# # \u8bbe\u7f6e\u8981\u751f\u6210\u6821\u9a8c\u7801\u7684\u6587\u4ef6\u5939\u8def\u5f84\n",
-        "# targetFolder='/input1'\n",
+        "# targetFolder='/output/content/stable-diffusion-v2-768'\n",
         "\n",
         "# # \u8c03\u7528 generate_checksum \u51fd\u6570\u751f\u6210\u6821\u9a8c\u7801\n",
         "# code = generate_checksum(\n",
@@ -408,7 +410,7 @@
         "    def check_dependencies_and_make_symbollink():\n",
         "        # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
         "        for i in range(5):\n",
-        "            dependencies_dir=find_folder(f'/input{i}','737665c3eb4443390bc8173483d4369e2951f28f3a5c87b65d096865eda574b3')\n",
+        "            dependencies_dir=find_folder(f'/input{i}','6c089def2938fcab36321d0fb27ec016a2b6fc5074a1c89e91b74ce973f307f2')\n",
         "            if dependencies_dir:\n",
         "                print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
         "                break\n",
@@ -424,7 +426,7 @@
         "    check_dependencies_and_make_symbollink()\n",
         "    \n",
         "    def check_model_and_make_symbollink():\n",
-        "        stable_diffusion_v2_dir=find_folder('/output/','9dafc9ba57054a61cc7d898e89b5fb33c7dc8ab9293609a40eda823793b2808a') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
+        "        stable_diffusion_v2_dir=find_folder('/output/','7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
         "        # print(stable_diffusion_v2_dir)\n",
         "        if stable_diffusion_v2_dir:\n",
         "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768':\n",
@@ -493,20 +495,51 @@
       "outputs": [],
       "source": [
         "import os\n",
+        "import subprocess\n",
         "\n",
-        "!pip uninstall -y diffusers\n",
+        "# \u5b9a\u4e49get_thisrepo_root\u51fd\u6570\uff0c\u83b7\u53d6\u5f53\u524drepo\u6240\u5728\u7684\u7236\u76ee\u5f55\n",
+        "def get_thisrepo_root():\n",
+        "    # \u8c03\u7528\u547d\u4ee4\u884c\u5de5\u5177git rev-parse\uff0c\u83b7\u53d6git\u9879\u76ee\u7684\u6839\u76ee\u5f55\n",
+        "    git_root = subprocess.run(\n",
+        "        [\"git\", \"rev-parse\", \"--show-toplevel\"],\n",
+        "        capture_output=True,\n",
+        "        text=True,\n",
+        "    ).stdout.strip()\n",
         "\n",
-        "# \u68c0\u6d4b diffusers \u76ee\u5f55\u662f\u5426\u5b58\u5728\n",
-        "if not os.path.exists(os.path.join(content_folder, 'diffusers')):\n",
-        "    # \u5982\u679c diffusers \u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5219\u8fdb\u884c clone\n",
-        "    !cd $content_folder &&\\\n",
-        "    git clone --branch updt https://github.com/TheLastBen/diffusers\n",
+        "    # \u83b7\u53d6\u6839\u76ee\u5f55\u7684\u7236\u76ee\u5f55\n",
+        "    parent_dir = os.path.dirname(git_root)\n",
+        "    \n",
+        "    return parent_dir\n",
+        "\n",
+        "installed_libraries = subprocess.run([\"pip\", \"freeze\"], capture_output=True).stdout.decode().split(\"\\n\")\n",
+        "# \u68c0\u67e5 diffusers \u5e93\u662f\u5426\u5df2\u7ecf\u5b89\u88c5\n",
+        "diffusers_installed = False\n",
+        "for library in installed_libraries:\n",
+        "    if library.startswith(\"diffusers\"):\n",
+        "        diffusers_installed = True\n",
+        "        break\n",
+        "\n",
+        "# \u5982\u679c\u5c1a\u672a\u5b89\u88c5 diffusers \u5e93\uff0c\u5219\u4e0b\u8f7d\u5e76\u5b89\u88c5\u5b83\n",
+        "if not diffusers_installed:\n",
+        "    print('\u68c0\u6d4b\u5230Diffusers\u8fd8\u6ca1\u5b89\u88c5\uff0c\u6b63\u5728\u5b89\u88c5...')\n",
+        "    # \u83b7\u53d6\u6839\u76ee\u5f55\u7684\u7236\u76ee\u5f55\n",
+        "    parent_dir = get_thisrepo_root()\n",
+        "    content_folder=os.path.join(parent_dir,'./content')\n",
+        "\n",
+        "    # \u68c0\u6d4b diffusers \u76ee\u5f55\u662f\u5426\u5b58\u5728\n",
+        "    if not os.path.exists(os.path.join(content_folder, 'diffusers')):\n",
+        "        # \u5982\u679c diffusers \u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5219\u8fdb\u884c clone\n",
+        "        !cd $content_folder &&\\\n",
+        "        git clone --branch updt https://github.com/TheLastBen/diffusers\n",
+        "    else:\n",
+        "        # \u5982\u679c diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u4e0d\u8fdb\u884c clone\uff0c\u76f4\u63a5\u8f93\u51fa\u63d0\u793a\u4fe1\u606f\n",
+        "        print('\u001b[1;32mdiffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u4e0d\u8fdb\u884c clone \u64cd\u4f5c\u3002\\033[0m')    \n",
+        "    \n",
+        "    !pip uninstall -y diffusers\n",
+        "    !pip install /openbayes/home/content/diffusers\n",
+        "    print('\u001b[1;32m\u5df2\u6210\u529f\u5b89\u88c5Diffusers!\\033[0m')\n",
         "else:\n",
-        "    # \u5982\u679c diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u4e0d\u8fdb\u884c clone\uff0c\u76f4\u63a5\u8f93\u51fa\u63d0\u793a\u4fe1\u606f\n",
-        "    print('diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u4e0d\u8fdb\u884c clone \u64cd\u4f5c\u3002')\n",
-        "  \n",
-        "!pip install --user $content_folder/diffusers\n",
-        "print('\u001b[1;32mDONE !')"
+        "    print('\u001b[1;32m\u5df2\u5b89\u88c5Diffusers\uff0c\u8df3\u8fc7\u4e0b\u8f7d\u548c\u5b89\u88c5!\\033[0m')"
       ]
     },
     {
