--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -544,6 +544,84 @@
     },
     {
       "cell_type": "markdown",
+      "id": "7f10412d-7878-46f8-a447-a5fd7f69b918",
+      "metadata": {},
+      "source": [
+        "# \u627e\u5230Diffusers\u9879\u76ee\u4e2d\u7684dreambooth.py\u8fdb\u884c\u6253\u5370\u4fe1\u606f\u65b9\u9762\u7684\u4fee\u6539"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f8f26b81-2b53-4292-8a77-fa918f41e35d",
+      "metadata": {
+        "tags": []
+      },
+      "outputs": [],
+      "source": [
+        "# \u5b9a\u4e49get_thisrepo_root\u51fd\u6570\uff0c\u83b7\u53d6\u5f53\u524drepo\u6240\u5728\u7684\u7236\u76ee\u5f55\n",
+        "def get_thisrepo_root():\n",
+        "    # \u8c03\u7528\u547d\u4ee4\u884c\u5de5\u5177git rev-parse\uff0c\u83b7\u53d6git\u9879\u76ee\u7684\u6839\u76ee\u5f55\n",
+        "    git_root = subprocess.run(\n",
+        "        [\"git\", \"rev-parse\", \"--show-toplevel\"],\n",
+        "        capture_output=True,\n",
+        "        text=True,\n",
+        "    ).stdout.strip()\n",
+        "\n",
+        "    # \u83b7\u53d6\u6839\u76ee\u5f55\u7684\u7236\u76ee\u5f55\n",
+        "    parent_dir = os.path.dirname(git_root)\n",
+        "    \n",
+        "    return parent_dir\n",
+        "\n",
+        "# \u5b9a\u4e49 get_file_path \u51fd\u6570\uff0c\u904d\u5386\u76ee\u5f55\uff0c\u627e\u5230\u4e0e anchor_file \u4f4d\u4e8e\u540c\u4e00\u76ee\u5f55\u4e0b\u7684 target_file\n",
+        "def get_file_path(root_dir, target_file, anchor_file):\n",
+        "    \"\"\"\n",
+        "    \u904d\u5386\u76ee\u5f55\uff0c\u8fd4\u56detarget_file\u6587\u4ef6\u6240\u5728\u7684\u76ee\u5f55\u8def\u5f84\uff0c\u5982\u679c\u76ee\u5f55\u4e2d\u6709anchor_file\u6587\u4ef6\n",
+        "    \n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    root_dir : str\n",
+        "        \u8981\u904d\u5386\u7684\u76ee\u5f55\n",
+        "    target_file : str\n",
+        "        \u8981\u67e5\u627e\u7684\u6587\u4ef6\u540d\n",
+        "    anchor_file : str\n",
+        "        \u7528\u4e8e\u6bd4\u8f83\u7684\u6587\u4ef6\u540d\n",
+        "        \n",
+        "    Returns\n",
+        "    -------\n",
+        "    str\n",
+        "        target_file\u6587\u4ef6\u6240\u5728\u7684\u76ee\u5f55\u8def\u5f84\n",
+        "    \"\"\"\n",
+        "    # \u904d\u5386root_dir\u76ee\u5f55\u4e2d\u7684\u6240\u6709\u6587\u4ef6\u548c\u5b50\u76ee\u5f55\n",
+        "    for root, dirs, files in os.walk(root_dir, topdown=True):\n",
+        "        # \u5982\u679c\u5f53\u524d\u76ee\u5f55\u4e2d\u6709target_file\u6587\u4ef6\n",
+        "        if target_file in files:\n",
+        "            # \u83b7\u53d6anchor_file\u6587\u4ef6\u7684\u8def\u5f84\n",
+        "            anchor_file_path = os.path.join(root, anchor_file)\n",
+        "            # \u83b7\u53d6target_file\u6587\u4ef6\u7684\u8def\u5f84\n",
+        "            target_file_path = os.path.join(root, target_file)\n",
+        "            # \u5982\u679canchor_file\u6587\u4ef6\u5b58\u5728\n",
+        "            if os.path.exists(anchor_file_path):\n",
+        "                # \u5982\u679canchor_file\u548ctarget_file\u6587\u4ef6\u5728\u540c\u4e00\u76ee\u5f55\u4e2d\n",
+        "                if os.path.dirname(anchor_file_path) == os.path.dirname(target_file_path):\n",
+        "                    # \u8fd4\u56detarget_file\u6587\u4ef6\u7684\u8def\u5f84\n",
+        "                    return target_file_path\n",
+        "\n",
+        "parent_dir = get_thisrepo_root()\n",
+        "content_folder=os.path.join(parent_dir,'./content')\n",
+        "diffusers_dir=os.path.realpath(os.path.join(content_folder, 'diffusers'))\n",
+        "\n",
+        "train_dreambooth_dir=get_train_dreambooth_py_dir(\n",
+        "    diffusers_dir,\n",
+        "    target_file='train_dreambooth.py',\n",
+        "    anchor_file='train_dreambooth_kg.py'\n",
+        ")\n",
+        "\n",
+        "print(train_dreambooth_dir)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "25fbefc9-7c37-48bb-97e1-4fef802fc9af",
       "metadata": {},
       "source": [
