add comment_line function

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -573,8 +573,8 @@
         "    \n",
         "    return parent_dir\n",
         "\n",
-        "# \u5b9a\u4e49 get_file_path \u51fd\u6570\uff0c\u904d\u5386\u76ee\u5f55\uff0c\u627e\u5230\u4e0e anchor_file \u4f4d\u4e8e\u540c\u4e00\u76ee\u5f55\u4e0b\u7684 target_file\n",
-        "def get_file_path(root_dir, target_file, anchor_file):\n",
+        "# \u5b9a\u4e49 get_file_path \u51fd\u6570\uff0c\u904d\u5386\u76ee\u5f55\uff0c\u627e\u5230\u4e0e anchor_file\uff08\u751a\u81f3\u4e0eanchor_file_2\uff09 \u4f4d\u4e8e\u540c\u4e00\u76ee\u5f55\u4e0b\u7684 target_file\n",
+        "def get_file_path(root_dir, target_file, anchor_file, anchor_file_2=None):\n",
         "    \"\"\"\n",
         "    \u904d\u5386\u76ee\u5f55\uff0c\u8fd4\u56detarget_file\u6587\u4ef6\u6240\u5728\u7684\u76ee\u5f55\u8def\u5f84\uff0c\u5982\u679c\u76ee\u5f55\u4e2d\u6709anchor_file\u6587\u4ef6\n",
         "    \n",
@@ -586,12 +586,14 @@
         "        \u8981\u67e5\u627e\u7684\u6587\u4ef6\u540d\n",
         "    anchor_file : str\n",
         "        \u7528\u4e8e\u6bd4\u8f83\u7684\u6587\u4ef6\u540d\n",
-        "        \n",
+        "    anchor_file_2 : str\n",
+        "        \u7528\u4e8e\u6bd4\u8f83\u7684\u6587\u4ef6\u540d2\uff0c\u53ef\u9009\u53c2\u6570\n",
         "    Returns\n",
         "    -------\n",
         "    str\n",
         "        target_file\u6587\u4ef6\u6240\u5728\u7684\u76ee\u5f55\u8def\u5f84\n",
         "    \"\"\"\n",
+        "    target_file_path = None\n",
         "    # \u904d\u5386root_dir\u76ee\u5f55\u4e2d\u7684\u6240\u6709\u6587\u4ef6\u548c\u5b50\u76ee\u5f55\n",
         "    for root, dirs, files in os.walk(root_dir, topdown=True):\n",
         "        # \u5982\u679c\u5f53\u524d\u76ee\u5f55\u4e2d\u6709target_file\u6587\u4ef6\n",
@@ -600,24 +602,73 @@
         "            anchor_file_path = os.path.join(root, anchor_file)\n",
         "            # \u83b7\u53d6target_file\u6587\u4ef6\u7684\u8def\u5f84\n",
         "            target_file_path = os.path.join(root, target_file)\n",
-        "            # \u5982\u679canchor_file\u6587\u4ef6\u5b58\u5728\n",
+        "            break\n",
+        "    # \u5982\u679ctarget_file\u6587\u4ef6\u7684\u8def\u5f84\u4e0d\u4e3a\u7a7a\n",
+        "    if target_file_path:\n",
+        "        # \u5982\u679canchor_file\u6587\u4ef6\u5b58\u5728\n",
+        "        if anchor_file and not anchor_file_2: \n",
         "            if os.path.exists(anchor_file_path):\n",
         "                # \u5982\u679canchor_file\u548ctarget_file\u6587\u4ef6\u5728\u540c\u4e00\u76ee\u5f55\u4e2d\n",
         "                if os.path.dirname(anchor_file_path) == os.path.dirname(target_file_path):\n",
         "                    # \u8fd4\u56detarget_file\u6587\u4ef6\u7684\u8def\u5f84\n",
         "                    return target_file_path\n",
+        "        elif anchor_file and anchor_file_2:\n",
+        "            # \u83b7\u53d6anchor_file_2\u6587\u4ef6\u7684\u8def\u5f84\n",
+        "            anchor_file_2_path = os.path.join(root, anchor_file_2)\n",
+        "            # \u5982\u679canchor_file_2\u6587\u4ef6\u5b58\u5728\n",
+        "            if os.path.exists(anchor_file_path) and os.path.exists(anchor_file_2_path):\n",
+        "                # \u5982\u679canchor_file_2\u548ctarget_file\u6587\u4ef6\u5728\u540c\u4e00\u76ee\u5f55\u4e2d\n",
+        "                if os.path.dirname(anchor_file_path) == os.path.dirname(target_file_path) and os.path.dirname(anchor_file_2_path) == os.path.dirname(target_file_path):\n",
+        "                    # \u8fd4\u56detarget_file\u6587\u4ef6\u7684\u8def\u5f84\n",
+        "                    return target_file_path\n",
+        "    return None\n",
         "\n",
         "parent_dir = get_thisrepo_root()\n",
         "content_folder=os.path.join(parent_dir,'./content')\n",
         "diffusers_dir=os.path.realpath(os.path.join(content_folder, 'diffusers'))\n",
         "\n",
-        "train_dreambooth_dir=get_train_dreambooth_py_dir(\n",
+        "train_dreambooth_dir=get_file_path(\n",
         "    diffusers_dir,\n",
         "    target_file='train_dreambooth.py',\n",
-        "    anchor_file='train_dreambooth_kg.py'\n",
+        "    anchor_file='train_dreambooth_kg.py',\n",
+        "    anchor_file_2='train_dreambooth_flax.py'\n",
         ")\n",
         "\n",
-        "print(train_dreambooth_dir)\n"
+        "print(train_dreambooth_dir)\n",
+        "\n",
+        "target_line='progress_bar.set_description_str(\"Progress:\"+pr)'\n",
+        "\n",
+        "import fileinput\n",
+        "\n",
+        "def comment_line(filepath: str, target_line: str) -> None:\n",
+        "    # \u4f7f\u7528 fileinput \u6a21\u5757\u7684 input() \u51fd\u6570\u904d\u5386\u6587\u4ef6\u4e2d\u7684\u6bcf\u4e00\u884c\n",
+        "    for line in fileinput.input(filepath, inplace=True):\n",
+        "        # \u8bb0\u5f55\u4e0b\u4ee3\u7801\u884c\u7684\u539f\u6709\u7f29\u8fdb\n",
+        "        indent = line[:len(line) - len(line.lstrip())]\n",
+        "        # \u79fb\u9664\u6240\u6709\u7a7a\u683c\u548c\u7f29\u8fdb\n",
+        "        stripped_line = line.strip()\n",
+        "        if stripped_line == target_line:\n",
+        "            # \u5728\u884c\u9996\u6dfb\u52a0\u4e00\u4e2a#\u53f7\u548c\u4e00\u4e2a\u7a7a\u683c\uff0c\u7136\u540e\u4f7f\u7528 print() \u51fd\u6570\u5c06\u4fee\u6539\u540e\u7684\u884c\u8f93\u51fa\u5230\u6587\u4ef6\u4e2d\n",
+        "            print(indent + \"# \" + stripped_line, end=\"\\n\")\n",
+        "        else:\n",
+        "            # \u5982\u679c\u4e0d\u662f\u8981\u6ce8\u91ca\u6389\u7684\u884c\uff0c\u5c31\u76f4\u63a5\u8f93\u51fa\u539f\u6765\u7684\u884c\n",
+        "            print(line, end=\"\")\n",
+        "    # \u4f7f\u7528 inplace=True \u53c2\u6570\u544a\u8bc9 fileinput \u6a21\u5757\uff0c\u5728\u4fee\u6539\u6587\u4ef6\u7684\u540c\u65f6\uff0c\u4e0d\u9700\u8981\u518d\u6253\u5f00\u548c\u5173\u95ed\u6587\u4ef6\n",
+        "    # \u8fd9\u6837\u5c31\u53ef\u4ee5\u76f4\u63a5\u5c06\u4fee\u6539\u540e\u7684\u5185\u5bb9\u5199\u5165\u5230\u6587\u4ef6\u4e2d\n",
+        "\n",
+        "def check_change(filepath: str, target_line: str) -> bool:\n",
+        "    with open(filepath, \"r\") as f:\n",
+        "        for line in f:\n",
+        "            if line.strip() == target_line:\n",
+        "                return False\n",
+        "    return True\n",
+        "\n",
+        "comment_line(train_dreambooth_dir, target_line)\n",
+        "\n",
+        "if check_change(train_dreambooth_dir, target_line):\n",
+        "    print(f'\u76ee\u6807\u8bed\u53e5\u3010{target_line}\u3011\u5df2\u7ecf\u88ab\u6ce8\u91ca\u6389')\n",
+        "else:\n",
+        "    print(f'\u76ee\u6807\u8bed\u53e5\u4ecd\u672a\u88ab\u6ce8\u91ca')"
       ]
     },
     {
