--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -533,13 +533,13 @@
         "        git clone --branch updt https://github.com/TheLastBen/diffusers\n",
         "    else:\n",
         "        # \u5982\u679c diffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u4e0d\u8fdb\u884c clone\uff0c\u76f4\u63a5\u8f93\u51fa\u63d0\u793a\u4fe1\u606f\n",
-        "        print('\u001b[1;32mdiffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u4e0d\u8fdb\u884c clone \u64cd\u4f5c\u3002\\033[0m')    \n",
+        "        print('\\033[1;32mdiffusers \u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u4e0d\u8fdb\u884c clone \u64cd\u4f5c\u3002\\033[0m')    \n",
         "    \n",
         "    !pip uninstall -y diffusers\n",
         "    !pip install /openbayes/home/content/diffusers\n",
-        "    print('\u001b[1;32m\u5df2\u6210\u529f\u5b89\u88c5Diffusers!\\033[0m')\n",
+        "    print('\\033[1;32m\u5df2\u6210\u529f\u5b89\u88c5Diffusers!\\033[0m')\n",
         "else:\n",
-        "    print('\u001b[1;32m\u5df2\u5b89\u88c5Diffusers\uff0c\u8df3\u8fc7\u4e0b\u8f7d\u548c\u5b89\u88c5!\\033[0m')"
+        "    print('\\033[1;32m\u5df2\u5b89\u88c5Diffusers\uff0c\u8df3\u8fc7\u4e0b\u8f7d\u548c\u5b89\u88c5!\\033[0m')"
       ]
     },
     {
@@ -636,8 +636,6 @@
         "\n",
         "print(train_dreambooth_dir)\n",
         "\n",
-        "target_line='progress_bar.set_description_str(\"Progress:\"+pr)'\n",
-        "\n",
         "import fileinput\n",
         "\n",
         "def comment_line(filepath: str, target_line: str) -> None:\n",
@@ -663,12 +661,14 @@
         "                return False\n",
         "    return True\n",
         "\n",
+        "target_line='progress_bar.set_description_str(\"Progress:\"+pr)'\n",
+        "\n",
         "comment_line(train_dreambooth_dir, target_line)\n",
         "\n",
         "if check_change(train_dreambooth_dir, target_line):\n",
-        "    print(f'\u76ee\u6807\u8bed\u53e5\u3010{target_line}\u3011\u5df2\u7ecf\u88ab\u6ce8\u91ca\u6389')\n",
+        "    print(f'\\033[1;32m\u76ee\u6807\u8bed\u53e5\u3010{target_line}\u3011\u5df2\u7ecf\u88ab\u6ce8\u91ca\u6389\\033[0m')\n",
         "else:\n",
-        "    print(f'\u76ee\u6807\u8bed\u53e5\u4ecd\u672a\u88ab\u6ce8\u91ca')"
+        "    print(f'\\033[1;31m\u76ee\u6807\u8bed\u53e5\u4ecd\u672a\u88ab\u6ce8\u91ca\\033[0m')"
       ]
     },
     {
