--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -258,7 +258,7 @@
       "id": "dcc0437a-0a10-4e76-9198-32a12c7a97d8",
       "metadata": {},
       "source": [
-        "# \u5b9a\u4e49\u4e00\u4e2a\u6821\u9a8c\u548c\u751f\u6210\u51fd\u6570\uff0c\u901a\u8fc7xxhash\u751f\u6210\u5bf9\u5e94\u6587\u4ef6\u5939\u6821\u9a8c\u548c\uff08\u4f9d\u636e\u662f\u76ee\u5f55\u7ed3\u6784\u548c\u6587\u4ef6\u540d\uff09\uff0c\u7528\u4e8e\u4e4b\u540e\u67e5\u627e\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
+        "# \u5b9a\u4e49\u4e00\u4e2a\u6821\u9a8c\u548c\u751f\u6210\u51fd\u6570\uff0c\u901a\u8fc7 hashlib \u751f\u6210\u5bf9\u5e94\u6587\u4ef6\u5939\u6821\u9a8c\u548c\uff08\u4f9d\u636e\u662f\u76ee\u5f55\u7ed3\u6784\u548c\u6587\u4ef6\u540d\uff09\uff0c\u7528\u4e8e\u4e4b\u540e\u67e5\u627e\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
       ]
     },
     {
@@ -390,10 +390,10 @@
         "\n",
         "    # \u9a8c\u8bc1\u8f6f\u94fe\u63a5\u662f\u5426\u6210\u529f\u521b\u5efa\n",
         "    if os.path.islink(symlink_file):\n",
-        "        print(f\"{symlink_file} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
+        "        print(f\"{symlink_file} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\")\n",
         "        print(f\"\\033[1m\\033[92m{symlink_file}\\033[0m \u279c \\033[34m{os.readlink(symlink_file)}\\033[0m\")\n",
         "    else:\n",
-        "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
+        "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\")\n",
         "\n",
         "        \n",
         "# # \u5728output\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2atf_dir\u6307\u5411dreambooth\u6253\u5370\u7684logs\u8f6f\u8fde\u63a5  \n",
@@ -406,14 +406,11 @@
         "env_name=detect_environment()[\"env_name\"]\n",
         "\n",
         "if env_name==\"OpenBayes\":\n",
-        "    # \u904d\u5386input0~4\uff0c\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u5e76\u8fdb\u884c\u590d\u5236\u64cd\u4f5c\n",
+        "    # \u904d\u5386\u6839\u76ee\u5f55\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u5e76\u8fdb\u884c\u590d\u5236\u64cd\u4f5c\n",
         "    def check_dependencies_and_make_symbollink():\n",
-        "        # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
-        "        for i in range(5):\n",
-        "            dependencies_dir=find_folder(f'/input{i}','6c089def2938fcab36321d0fb27ec016a2b6fc5074a1c89e91b74ce973f307f2')\n",
-        "            if dependencies_dir:\n",
-        "                print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
-        "                break\n",
+        "        dependencies_dir=find_folder('/openbayes/input','6c089def2938fcab36321d0fb27ec016a2b6fc5074a1c89e91b74ce973f307f2')\n",
+        "        if dependencies_dir:\n",
+        "            print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
         "        if dependencies_dir:\n",
         "        # !cp -r $dependencies_dir/* /openbayes/home/content/\n",
         "            for file in os.listdir(dependencies_dir):\n",
@@ -426,7 +423,7 @@
         "    check_dependencies_and_make_symbollink()\n",
         "    \n",
         "    def check_model_and_make_symbollink():\n",
-        "        stable_diffusion_v2_dir=find_folder('/output/','7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
+        "        stable_diffusion_v2_dir=find_folder('/openbayes','7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
         "        # print(stable_diffusion_v2_dir)\n",
         "        if stable_diffusion_v2_dir:\n",
         "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768':\n",
