--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -2,20 +2,65 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "id": "c5b4ea5b-d812-4bfe-885d-231e55c1a7d4",
+      "metadata": {},
+      "source": [
+        "# \u628a\u5f53\u524drepo\u6839\u76ee\u5f55\u52a0\u5165 Python \u641c\u7d22\u6a21\u5757\u7684\u8def\u5f84\u5217\u8868"
+      ],
+      "outputs": [],
+      "execution_count": null
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "d99d34cc-f14f-4c06-85c6-d0e99a7f4f52",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import os,sys\n",
+        "\n",
+        "def find_repo_root():\n",
+        "    # \u83b7\u53d6\u5f53\u524d\u811a\u672c\u7684\u7edd\u5bf9\u8def\u5f84\n",
+        "    try:\n",
+        "        # \u5982\u679c\u5f53\u524d\u8fd0\u884c\u73af\u5883\u662f Jupyter Notebook\uff0c\u4f7f\u7528\u5f53\u524d\u5de5\u4f5c\u76ee\u5f55\n",
+        "        script_path = os.path.abspath('.')\n",
+        "    except NameError:\n",
+        "        # \u5426\u5219\uff0c\u4f7f\u7528 __file__ \u53d8\u91cf\n",
+        "        script_path = os.path.abspath(__file__)\n",
+        "    # \u521d\u59cb\u5316\u5b58\u50a8\u7ed3\u679c\u7684\u53d8\u91cf\n",
+        "    result = None\n",
+        "    # \u5faa\u73af\u6c42\u5f53\u524d\u8def\u5f84\u7684\u7236\u76ee\u5f55\uff0c\u76f4\u5230\u627e\u5230`.git`\u6587\u4ef6\u5939\n",
+        "    while True:\n",
+        "        # \u5c06\u5f53\u524d\u8def\u5f84\u7684\u7236\u76ee\u5f55\u8d4b\u503c\u7ed9\u5f53\u524d\u8def\u5f84\n",
+        "        script_path = os.path.dirname(script_path)\n",
+        "        # \u5224\u65ad\u5f53\u524d\u8def\u5f84\u662f\u5426\u5b58\u5728`.git`\u6587\u4ef6\u5939\n",
+        "        if os.path.isdir(os.path.join(script_path, '.git')):\n",
+        "            # \u5982\u679c\u5b58\u5728\uff0c\u5c06\u5f53\u524d\u8def\u5f84\u5b58\u50a8\u5728\u7ed3\u679c\u53d8\u91cf\u4e2d\n",
+        "            result = script_path\n",
+        "        # \u5224\u65ad\u5f53\u524d\u8def\u5f84\u662f\u5426\u4e3a\u6839\u76ee\u5f55\uff08\u5373\u662f\u5426\u5df2\u7ecf\u641c\u7d22\u5230\u6700\u5916\u5c42\uff09\n",
+        "        if script_path == '/':\n",
+        "            # \u5982\u679c\u662f\uff0c\u8fd4\u56de\u7ed3\u679c\u53d8\u91cf\u7684\u503c\n",
+        "            return result\n",
+        "        \n",
+        "repo_root_dir=find_repo_root()\n",
+        "sys.path.append(repo_root_dir)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "8bbdb2c9-4ce6-4ffd-92d7-6ebd91771f91",
       "metadata": {},
       "source": [
         "# Colab\u7684\u9ed8\u8ba4\u73af\u5883\u8ddf\u8fd9\u91cc\u7684\u9ed8\u8ba4\u73af\u5883\u6709\u5dee\u5f02\uff0c\u9700\u8981\u5b89\u88c5\u989d\u5916\u7684\u4f9d\u8d56"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
-      "metadata": {
-        "scrolled": true,
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import subprocess\n",
@@ -72,15 +117,15 @@
       "metadata": {},
       "source": [
         "# \u914d\u7f6eaccelerate"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "411362b2-a1e3-4c92-b774-e97365554cb2",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "!chmod +x ./accelerate.sh\n",
@@ -90,20 +135,18 @@
     {
       "cell_type": "markdown",
       "id": "df462c9a-eb68-4fe9-85ff-37ef243442a6",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "source": [
         "# \u521b\u5efaTemp\u6587\u4ef6\u5939\u5e76\u4e0b\u8f7dfast-DreamBooth.ipynb\u5230Temp\u76ee\u5f55\u4e0b"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import wget\n",
@@ -168,15 +211,15 @@
       "metadata": {},
       "source": [
         "# \u521b\u5efaContent\u6587\u4ef6\u5939"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "0d2db384-8a43-4650-be96-af090b779f06",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
@@ -255,127 +298,24 @@
     },
     {
       "cell_type": "markdown",
-      "id": "dcc0437a-0a10-4e76-9198-32a12c7a97d8",
-      "metadata": {},
-      "source": [
-        "# \u5b9a\u4e49\u4e00\u4e2a\u6821\u9a8c\u548c\u751f\u6210\u51fd\u6570\uff0c\u901a\u8fc7xxhash\u751f\u6210\u5bf9\u5e94\u6587\u4ef6\u5939\u6821\u9a8c\u548c\uff08\u4f9d\u636e\u662f\u76ee\u5f55\u7ed3\u6784\u548c\u6587\u4ef6\u540d\uff09\uff0c\u7528\u4e8e\u4e4b\u540e\u67e5\u627e\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "d432177d-a351-4e3f-9cae-106e2cbec45d",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "import hashlib\n",
-        "import time\n",
-        "\n",
-        "def generate_checksum(folder_path, print_elapsed_time=False):\n",
-        "    # \u5f00\u59cb\u8ba1\u65f6\n",
-        "    start_time = time.time()\n",
-        "    # \u521b\u5efa sha256 \u54c8\u5e0c\u5bf9\u8c61\n",
-        "    checksum = hashlib.sha256()\n",
-        "    # \u904d\u5386\u6587\u4ef6\u5939\n",
-        "    with os.scandir(folder_path) as entries:\n",
-        "        # \u5bf9\u6587\u4ef6\u548c\u5b50\u6587\u4ef6\u5939\u6309\u7167\u5b57\u6bcd\u987a\u5e8f\u6392\u5e8f\n",
-        "        sorted_entries = sorted(entries, key=lambda entry: entry.name)\n",
-        "        for entry in sorted_entries:\n",
-        "            # \u82e5\u4e3a\u5b50\u6587\u4ef6\u5939\uff0c\u5219\u9012\u5f52\u8c03\u7528 generate_checksum()\n",
-        "            if entry.is_dir():\n",
-        "                # \u9012\u5f52\u8c03\u7528 generate_checksum()\n",
-        "                checksum.update(generate_checksum(entry.path).encode())\n",
-        "            # \u82e5\u4e3a\u6587\u4ef6\uff0c\u5219\u66f4\u65b0\u6587\u4ef6\u540d\u54c8\u5e0c\u503c\n",
-        "            else:\n",
-        "                checksum.update(entry.name.encode())\n",
-        "    # \u7ed3\u675f\u8ba1\u65f6\n",
-        "    elapsed_time = time.time() - start_time\n",
-        "    # \u8f93\u51fa\u6240\u7528\u65f6\u95f4\n",
-        "    if print_elapsed_time:\n",
-        "        print(f'\u751f\u6210\u6821\u9a8c\u7801\u8017\u65f6: {elapsed_time:.2f} \u79d2')\n",
-        "    # \u8fd4\u56de\u5341\u516d\u8fdb\u5236\u54c8\u5e0c\u503c\n",
-        "    return checksum.hexdigest()\n",
-        "\n",
-        "\n",
-        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\u56e0\u4e3a\u5df2\u7ecf\u83b7\u53d6\u5230 stable-diffusion-v2-768 \u7684 code \u662f 7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb\n",
-        "# # \u8bbe\u7f6e\u8981\u751f\u6210\u6821\u9a8c\u7801\u7684\u6587\u4ef6\u5939\u8def\u5f84\n",
-        "# targetFolder='/output/content/stable-diffusion-v2-768'\n",
-        "\n",
-        "# # \u8c03\u7528 generate_checksum \u51fd\u6570\u751f\u6210\u6821\u9a8c\u7801\n",
-        "# code = generate_checksum(\n",
-        "#     folder_path=targetFolder,\n",
-        "#     print_elapsed_time=True\n",
-        "# )\n",
-        "\n",
-        "# # \u8f93\u51fa\u6821\u9a8c\u7801\n",
-        "# print(code)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "id": "67c1f76a-cf87-4eba-9dec-952cf9154a6f",
-      "metadata": {},
-      "source": [
-        "# \u5b9a\u4e49find_folder\u51fd\u6570\uff0c\u4ee5\u4fbf\u540e\u7eed\u901a\u8fc7\u6821\u9a8c\u548c\u627e\u56de\u5bf9\u5e94\u7684\u6587\u4ef6\u5939"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "e72f4761-311f-4a87-b59e-6940459451b9",
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "import time\n",
-        "\n",
-        "def find_folder(root_folder, checksum):\n",
-        "    start_time = time.time()\n",
-        "    # \u5148\u8ba1\u7b97\u6839\u76ee\u5f55\u7684\u6821\u9a8c\u548c\n",
-        "    root_checksum = generate_checksum(root_folder)\n",
-        "    if root_checksum == checksum:\n",
-        "        elapsed_time = time.time() - start_time\n",
-        "        print(f'\\033[32m\u5728\u76ee\u5f55 {root_folder} \u4e0b\uff0c\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\uff0c\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{root_folder}\\033[0m')\n",
-        "        return root_folder\n",
-        "    # \u904d\u5386\u76ee\u5f55\u6811\n",
-        "    for root, dirs, files in os.walk(root_folder):\n",
-        "        for folder in dirs:\n",
-        "            folder_path = os.path.join(root, folder)\n",
-        "            folder_checksum = generate_checksum(folder_path)\n",
-        "            if folder_checksum == checksum:\n",
-        "                elapsed_time = time.time() - start_time\n",
-        "                print(f'\\033[32m\u5728\u76ee\u5f55 {root_folder} \u4e0b\uff0c\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\uff0c\u6587\u4ef6\u8def\u5f84\u4e3a\uff1a{folder_path}\\033[0m')\n",
-        "                return folder_path\n",
-        "    elapsed_time = time.time() - start_time\n",
-        "    print(f'\\033[31m\u5728\u76ee\u5f55 {root_folder} \u4e0b\uff0c\u672a\u627e\u5230\u6821\u9a8c\u548c\u4e3a\u3010{checksum}\u3011\u7684\u76ee\u5f55\uff0c\u8017\u65f6: {elapsed_time:.2f} \u79d2\\033[0m')\n",
-        "    return None\n",
-        "\n",
-        "# # \u751f\u4ea7\u73af\u5883\u4e0b\u65e0\u9700\u8fd0\u884c\u4ee5\u4e0b\u4ee3\u7801\uff0c\n",
-        "# find_folder('/input1', 'c7ee605be833a2d9')"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "8ab23d58-33f8-428b-885a-740386e4713c",
       "metadata": {},
       "source": [
         "# \u81ea\u52a8\u641c\u5bfb\u5e76\u6302\u8f7d\u6570\u636e\u96c6\u548c\u6a21\u578b\uff0c\u6216\u5bf9\u6570\u636e\u96c6\u8fdb\u884c\u89e3\u538b\uff0c\u6216\u521b\u5efa\u7b26\u53f7\u94fe\u63a5\uff08Symbol Link \u8f6f\u8fde\u63a5\uff09"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
+        "# \u5bfc\u5165checksum\u51fd\u6570\n",
+        "from func.checksum import generate_checksum,find_folder\n",
         "\n",
         "def create_symlink(source_path, symlink_path, symlink_name):\n",
         "    # \u5c06\u8f6f\u94fe\u63a5\u8def\u5f84\u62fc\u63a5\u6210\u5b8c\u6574\u7684\u6587\u4ef6\u8def\u5f84\n",
@@ -406,14 +346,11 @@
         "env_name=detect_environment()[\"env_name\"]\n",
         "\n",
         "if env_name==\"OpenBayes\":\n",
-        "    # \u904d\u5386input0~4\uff0c\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u5e76\u8fdb\u884c\u590d\u5236\u64cd\u4f5c\n",
+        "    # \u904d\u5386/openbayes\uff0c\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u5e76\u8fdb\u884c\u590d\u5236\u64cd\u4f5c\n",
         "    def check_dependencies_and_make_symbollink():\n",
-        "        # \u904d\u5386 input0\u3001input1\u3001input2\u3001input3\u3001input4 \u4e94\u4e2a\u76ee\u5f55\n",
-        "        for i in range(5):\n",
-        "            dependencies_dir=find_folder(f'/input{i}','6c089def2938fcab36321d0fb27ec016a2b6fc5074a1c89e91b74ce973f307f2')\n",
-        "            if dependencies_dir:\n",
-        "                print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
-        "                break\n",
+        "        dependencies_dir=find_folder('/openbayes/input','6c089def2938fcab36321d0fb27ec016a2b6fc5074a1c89e91b74ce973f307f2')\n",
+        "        if dependencies_dir:\n",
+        "            print(f'\u5df2\u627e\u5230\u5e26\u6709\u4f9d\u8d56\u538b\u7f29\u5305\u7684\u6570\u636e\u96c6\uff08\u6216\u6587\u4ef6\u5939\uff09\uff0c\u76ee\u5f55\u6240\u5728\u4f4d\u7f6e\u4e3a\uff1a{dependencies_dir}')\n",
         "        if dependencies_dir:\n",
         "        # !cp -r $dependencies_dir/* /openbayes/home/content/\n",
         "            for file in os.listdir(dependencies_dir):\n",
@@ -426,10 +363,10 @@
         "    check_dependencies_and_make_symbollink()\n",
         "    \n",
         "    def check_model_and_make_symbollink():\n",
-        "        stable_diffusion_v2_dir=find_folder('/output/','7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
+        "        stable_diffusion_v2_dir=find_folder('/openbayes','7d3e9649526266e0e69b9bad33e509975ba261fb5b6c8ce3b7c26495c4ac4dcb') #\u8be5\u6821\u9a8c\u548c\u662f\u901a\u8fc7\u524d\u4e24\u4e2a cell \u4e2d\u7684 generate_checksum \u51fd\u6570\u751f\u6210\u7684\n",
         "        # print(stable_diffusion_v2_dir)\n",
         "        if stable_diffusion_v2_dir:\n",
-        "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768':\n",
+        "            if stable_diffusion_v2_dir=='/output/content/stable-diffusion-v2-768' or stable_diffusion_v2_dir=='/openbayes/home/content/stable-diffusion-v2-768':\n",
         "                print('stable-diffusion-v2\u7684diffuser\u5f62\u6001\u7684\u6a21\u578b\u5df2\u7ecf\u5728\u76ee\u6807\u4f4d\u7f6e\uff0c\u65e0\u9700\u521b\u5efa\u8f6f\u8fde\u63a5')\n",
         "            else:\n",
         "                # \u5728Content\u76ee\u5f55\u4e0b\u521b\u5efa\u4e00\u4e2a\u6307\u5411\u6302\u8f7d\u6a21\u578b\u7684\u8f6f\u8fde\u63a5\n",
@@ -483,15 +420,15 @@
       "metadata": {},
       "source": [
         "# \u5b89\u88c5Diffusers"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "48f1f509-510c-4ce0-b568-2ea6aa9c6057",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import os\n",
@@ -548,15 +485,15 @@
       "metadata": {},
       "source": [
         "# \u627e\u5230Diffusers\u9879\u76ee\u4e2d\u7684dreambooth.py\u8fdb\u884c\u6253\u5370\u4fe1\u606f\u65b9\u9762\u7684\u4fee\u6539"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "f8f26b81-2b53-4292-8a77-fa918f41e35d",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "# \u5b9a\u4e49get_thisrepo_root\u51fd\u6570\uff0c\u83b7\u53d6\u5f53\u524drepo\u6240\u5728\u7684\u7236\u76ee\u5f55\n",
@@ -677,15 +614,15 @@
       "metadata": {},
       "source": [
         "# \u6e05\u7406Notebook\u4e2d\u7684\u8f93\u51fa\uff0c\u5bf9Colab\u7248\u4e2d\u7684\u8def\u5f84\u8fdb\u884c\u66ff\u6362\uff0c\u4ee5\u9002\u5e94openbayes\u6216autodl\u7684\u8def\u5f84"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "73aec890-1745-4f77-b3bc-af98d1726554",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import json\n",
@@ -873,15 +810,15 @@
       "metadata": {},
       "source": [
         "# \u6839\u636e\u7279\u5f81\u7247\u6bb5\u8fdb\u884c\u6574\u4e2aCell\u7684\u66ff\u6362"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "22b9a0fd-cf24-4d3e-af09-39fbb206d1d4",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import json\n",
@@ -943,15 +880,15 @@
       "metadata": {},
       "source": [
         "# \u5bf9\u6307\u5b9a\u7684\u53d8\u91cf\u540d\u8fdb\u884c\u5b57\u7b26\u4e32\u548c\u53c2\u6570\u7684\u66ff\u6362"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import json\n",
@@ -1038,15 +975,15 @@
       "metadata": {},
       "source": [
         "# \u68c0\u67e5\u6700\u7ec8\u7248\u672c\u7684ipynb\u91cc\u9762\u7684\u8d4b\u503c\u60c5\u51b5"
-      ]
+      ],
+      "outputs": [],
+      "execution_count": null
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
-      "metadata": {
-        "tags": []
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
         "import json\n",
